<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lugares"
    tools:context=".Login">

    <ImageView
        android:id="@+id/icono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="556dp"
        android:src="@drawable/usuario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight="120dp"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.854"
        app:layout_constraintWidth="120dp" />

    <EditText
        android:id="@+id/usuario"
        app:layout_constraintTop_toBottomOf="@+id/icono"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:hint="@string/usuario"
        android:inputType="text"
        android:textStyle="bold"
        android:textSize="22dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        />

    <EditText
        android:id="@+id/contrasena"
        app:layout_constraintTop_toBottomOf="@+id/usuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        android:textStyle="bold"
        android:textSize="22dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        />


    <ImageView
        android:id="@+id/logoface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/facebook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contrasena"
        app:layout_constraintVertical_bias="0.305"
        app:layout_constraintWidth="64dp" />

    <ImageView
        android:id="@+id/logogmail"
        android:layout_width="82dp"
        android:layout_height="128dp"
        android:src="@drawable/correo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contrasena"
        app:layout_constraintVertical_bias="0.305"
        app:layout_constraintWidth="64dp" />

    <ImageView
        android:id="@+id/logogit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/github"
        app:flow_horizontalBias="0.02"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.680"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contrasena"
        app:layout_constraintVertical_bias="0.305"
        app:layout_constraintWidth="64dp" />

    <Button
        android:id="@+id/botoningresar"
        android:layout_width="305dp"
        android:layout_height="85dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/lightseagreen"
        android:text="@string/ingresar"
        android:textAlignment="center"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logogit"
        app:layout_constraintVertical_bias="0.026" />


</androidx.constraintlayout.widget.ConstraintLayout>